--- a/도안동.html
+++ b/도안동.html
@@ -173,21 +173,16 @@
         }
 
         function playMusic(musicFile) {
-            stopCurrentUtterance(); // 음악 재생 전에 TTS 중지
-            stopCurrentAudio(); // 이전 음악 중지
+            stopCurrentAudio();
             const audio = new Audio(musicFile);
             audio.play();
             currentAudio = audio;
         }
 
         function speak(text) {
-            stopCurrentAudio(); // TTS 재생 전에 음악 중지
-            stopCurrentUtterance(); // 이전 TTS 중지
+            stopCurrentUtterance();
             const utterance = new SpeechSynthesisUtterance(text);
             utterance.lang = 'ko-KR'; // 한국어 설정
-            utterance.onend = () => {
-                currentUtterance = null; // TTS 종료 시 현재 TTS 객체 초기화
-            };
             speechSynthesis.speak(utterance);
             currentUtterance = utterance;
         }
@@ -214,7 +209,7 @@
                         if (isAtTargetLocation(lat, lon, targetLat, targetLon, tolerance)) {
                             if (!hasPlayed[location.musicFile]) {
                                 if (location.musicFile === 'TTS') {
-                                    speak(`이번역은 ${location.name}입니다.`);
+                                    speak(location.name);
                                 } else {
                                     playMusic(location.musicFile);
                                 }
@@ -236,7 +231,9 @@
                     if (currentTarget) {
                         const currentTargetName = currentTarget.name;
                         const nextTargetName = nextTarget ? nextTarget.name : '다음 목표 없음';
-                        // TTS가 있는 경우만 추가적인 안내를 하지 않음
+                        if (currentTarget.musicFile === 'TTS') {
+                            speak(`이번역은 ${currentTargetName}입니다. 다음역은 ${nextTargetName}입니다.`);
+                        }
                     }
                 }, error => {
                     console.error(error);
