--- a/도안동.html
+++ b/도안동.html
@@ -149,7 +149,7 @@
         const locations = [
             { lat: 36.3131, lon: 127.3477, musicFile: 'TTS', name: '베르디움중앙광장' },
             { lat: 36.3158, lon: 127.3472, musicFile: 'TTS', name: '리슈빌중앙광장' },
-            { lat: 36.9999, lon: 127.9999, musicFile: '1.mp3', name: '도안리슈빌 1710동앞' },            
+            { lat: 36.9999, lon: 127.9999, musicFile: '1.mp3', name: '도안리슈빌 1710동앞.' },            
             
             { lat: 36.3208, lon: 127.3477, musicFile: 'TTS', name: '수목토후문' },
             { lat: 36.3233, lon: 127.3477, musicFile: 'TTS', name: '도안동행정복지센터' },
