--- a/도안동.html
+++ b/도안동.html
@@ -181,7 +181,7 @@
         const locations = [
             { lat: 36.3131, lon: 127.3477, musicFile: 'TTS', name: '베르디움중앙광장' },
             { lat: 36.3158, lon: 127.3472, musicFile: 'TTS', name: '리슈빌중앙광장' },
-            { lat: 36.9999, lon: 127.9999, musicFile: '1.mp3', name: '도안리슈빌 1710동앞.' },            
+            { lat: 36.9999, lon: 127.9999, musicFile: '1.mp3', name: '도안리슈빌 1710동앞' },            
             
             { lat: 36.3208, lon: 127.3477, musicFile: 'TTS', name: '수목토후문' },
             { lat: 36.3233, lon: 127.3477, musicFile: 'TTS', name: '도안동행정복지센터' },
@@ -203,7 +203,7 @@
             { lat: 36.3170, lon: 127.3453, musicFile: 'TTS', name: '도안중학교' },
             { lat: 36.3170, lon: 127.3465, musicFile: 'TTS', name: '소태공원' },
             
-            { lat: 36.3171, lon: 127.3478, musicFile: '1.mp3', name: '도인리슈빌 1710동앞' },
+            { lat: 36.3173, lon: 127.3479, musicFile: '1.mp3', name: '도인리슈빌 1710동앞' },
             { lat: 36.3129, lon: 127.3499, musicFile: 'TTS', name: '호반베르디움후문' },
             { lat: 36.3090, lon: 127.3515, musicFile: 'TTS', name: '우미린풀하우스후문' },
             { lat: 36.9999, lon: 127.9999, musicFile: 'TTS', name: '가수원네거리' },
