--- a/index.html
+++ b/index.html
@@ -8,25 +8,106 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            padding: 50px;
+            padding: 0;
+            margin: 0;
             background-color: #f4f4f4;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+        }
+        header {
+            background-color: #007bff;
+            color: white;
+            padding: 36px;
+        }
+        header h1 {
+            margin: 0;
+            font-size: 36px;
+        }
+        .container {
+            flex: 1;
+            max-width: 1200px;
+            margin: 20px auto;
+            padding: 0 20px;
         }
         .link-container {
-            margin: 20px;
+            margin: 20px 0;
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            flex-wrap: wrap;
         }
         .link-container a {
             display: inline-block;
             text-decoration: none;
             color: #007bff;
-            font-size: 20px;
-            padding: 10px 20px;
+            font-size: 18px;
+            padding: 12px 25px;
             border: 2px solid #007bff;
-            border-radius: 5px;
-            transition: background-color 0.3s, color 0.3s;
+            border-radius: 6px;
+            transition: background-color 0.3s, color 0.3s, box-shadow 0.3s;
+            font-weight: bold;
+            text-transform: uppercase;
         }
         .link-container a:hover {
             background-color: #007bff;
             color: white;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+        .notice {
+            margin: 20px auto;
+            text-align: left;
+            border: 2px solid #28a745;
+            border-radius: 5px;
+            padding: 10px 15px;
+            position: relative;
+            max-width: 600px;
+            background-color: #e9f7e9;
+            overflow: hidden; /* 콘텐츠가 넘칠 경우 숨김 처리 */
+            transition: padding 0.5s ease-out; /* 패딩 애니메이션 */
+        }
+        .notice h2 {
+            cursor: pointer;
+            color: #28a745;
+            font-size: 24px;
+            margin: 0;
+            display: flex;
+            align-items: center;
+            justify-content: space-between; /* 제목과 버튼 사이 공간 조정 */
+            transition: color 0.3s;
+        }
+        .notice h2 .toggle-button {
+            font-size: 20px;
+            transition: transform 0.6s ease; /* 삼각형 회전 애니메이션 */
+        }
+        .notice-content {
+            max-height: 0;
+            overflow: hidden;
+            transition: max-height 0.6s ease-out; /* 내용 애니메이션 */
+        }
+        .notice.expanded .notice-content {
+            max-height: 500px; /* 충분히 큰 값을 설정하여 내용이 모두 표시되도록 함 */
+        }
+        .notice.expanded h2 .toggle-button {
+            transform: rotate(180deg); /* 삼각형 회전 */
+        }
+        footer {
+            background-color: #f1f1f1;
+            color: #333;
+            padding: 20px;
+            border-top: 1px solid #ddd;
+            text-align: center;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+        }
+        footer a {
+            color: #007bff;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+        footer a:hover {
+            text-decoration: underline;
         }
     </style>
     <script>
@@ -36,18 +117,44 @@
                 window.location.href = url; // 확인 시 페이지 이동
             }
         }
+
+        function toggleNotice() {
+            const notice = document.querySelector('.notice');
+            if (notice.classList.contains('expanded')) {
+                notice.classList.remove('expanded');
+            } else {
+                notice.classList.add('expanded');
+            }
+        }
     </script>
 </head>
 <body>
-    <h1>GPS 자동 안내방송 시스템</h1>
-    <div class="link-container">
-        <a href="https://mytwice.github.io/GPS_Broadcasting_System/대전1호선" onclick="confirmNavigation(event, 'https://mytwice.github.io/GPS_Broadcasting_System/대전1호선')">대전 1호선</a>
+    <header>
+        <h1>GPS 자동 안내방송 시스템</h1>
+    </header>
+    <div class="container">
+        <div class="notice">
+            <h2 onclick="toggleNotice()">공지사항
+                <span class="toggle-button">▼</span>
+            </h2>
+            <div class="notice-content">
+                <ul>
+                    <li>TTS로 크롬으로 접속하시는 것을 추천드립니다</li>
+                    <li>이 사이트는 대중교통 운영사와는 무관한 개인이 취미로 개발한 사이트입니다.</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="link-container">
+            <a href="https://mytwice.github.io/GPS_Broadcasting_System/대전1호선" onclick="confirmNavigation(event, 'https://mytwice.github.io/GPS_Broadcasting_System/대전1호선')">대전 1호선</a>
+            <a href="https://mytwice.github.io/GPS_Broadcasting_System/도안동" onclick="confirmNavigation(event, 'https://mytwice.github.io/GPS_Broadcasting_System/도안동')">도안동</a>
+            <a href="https://mytwice.github.io/GPS_Broadcasting_System/의정부경전철" onclick="confirmNavigation(event, 'https://mytwice.github.io/GPS_Broadcasting_System/의정부경전철')">의정부경전철</a>
+        </div>
     </div>
-    <div class="link-container">
-        <a href="https://mytwice.github.io/GPS_Broadcasting_System/도안동" onclick="confirmNavigation(event, 'https://mytwice.github.io/GPS_Broadcasting_System/도안동')">도안동</a>
-    </div>
-    <div class="link-container">
-        <a href="https://mytwice.github.io/GPS_Broadcasting_System/의정부경전철" onclick="confirmNavigation(event, 'https://mytwice.github.io/GPS_Broadcasting_System/의정부경전철')">의정부경전철</a>
-    </div>
+
+    <footer>
+        <p>&copy; 2024 GPS 자동 안내방송 시스템</p>
+        <a href="notpage">문의하기</a>
+    </footer>
 </body>
 </html>
